--- a/source/assets/styles/main.scss
+++ b/source/assets/styles/main.scss
@@ -638,6 +638,7 @@ main > section.sticky + section{
     // padding-top:100%;
     background-color: transparent;
     border:0;
+    width: fit-content;
     
     // margin-left:var(--pad);
     // wont have any effect
